--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,8 @@
     	
     	<!-- Stylesheet -->
     	<link href="import/css/bootstrap-3.7.7.min.css" rel="stylesheet">
-
         <link href="import/css/angular-toastr.2.0.0.min.css" rel="stylesheet">
+        <link href="import/css/angular-material.css" rel="stylesheet">
     	<link href="import/css/main.css" rel="stylesheet">
 
     	<!-- Javascript -->
@@ -19,6 +19,13 @@
     	<script type="text/javascript" src="import/js/angular-route-1.5.8.min.js"></script>
         <script type="text/javascript" src="import/js/satellizer-0.15.4.min.js"></script>
         <script type="text/javascript" src="import/js/angular-toastr.tpls-2.0.0.min.js"></script>
+<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-animate.min.js'></script>
+<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-aria.min.js'></script>
+<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-messages.min.js'></script>
+<script src='https://gitcdn.xyz/repo/angular/bower-material/v0.10.1-rc4/angular-material.js'></script>
+        <script type="text/javascript" src="import/js/ui-bootstrap-tpls-2.0.0.min.js"></script>
+
+
 
     	<!-- AngularJs -->
     	<script type="text/javascript" src="app.js"></script>
