--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
 <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-messages.min.js'></script>
 <script src='https://gitcdn.xyz/repo/angular/bower-material/v0.10.1-rc4/angular-material.js'></script>
         <script type="text/javascript" src="import/js/ui-bootstrap-tpls-2.0.0.min.js"></script>
-
+        <script type="text/javascript" src="import/js/ng-flow-standalone.min.js"></script>
 
 
     	<!-- AngularJs -->
